--- a/templates/components/header.njk
+++ b/templates/components/header.njk
@@ -224,14 +224,14 @@
         <span class="clearfix"></span>
     </div>
 
-    <!--<div class="mobile-version">
+    <div class="mobile-version">
         <a href="https://uniqa.ua/ua/private/" class="account-type selected ">Для вас</a>
         <a href="https://uniqa.ua/ua/business/" class="account-type">Для бизнеса</a>
         <span class="clearfix"></span>
-    </div>-->
+    </div>
     <div class="mobile-version top-gutter-header">
       {# <a href="my-registration-2.html" class="account-action register">Inregistreaza-te<em class="icon icon-user-registration-header abs-icn"></em></a> #}
-      <a href="my-login-2.html" class="account-action login">Logheaza-te<em class="icon icon-user-login-header abs-icn"></em></a>
+      <a href="index.html" class="account-action login">Logheaza-te<em class="icon icon-close-mobile abs-icn"></em></a>
       <span class="clearfix"></span>
     </div>
     <span class="clearfix"></span>
