--- a/css/old/common.css
+++ b/css/old/common.css
@@ -1919,7 +1919,7 @@ button.button-search {
 }
 
 button {
-	font-family: ItcStoneSansMedium, sans-serif !important;
+	font-family: ItcStoneSansMedium, sans-serif;
 }
 
 /*---------------------------------------------------- Pager ----------------------------------------------------------*/
