--- a/css/new/form.css
+++ b/css/new/form.css
@@ -108,7 +108,9 @@
   height: auto;
 }
 
-.u-btn {
+.u-btn,
+a.u-btn,
+button.u-btn {
     display: inline-block;
     box-sizing: border-box;
     color: #fff;
@@ -118,7 +120,7 @@
     border: none;
     text-decoration: none;
     font-style: normal;
-    letter-spacing: 0.05rem;
+    font-family: Lato, sans-serif;
 
     &[disabled] {
       opacity: .5;
@@ -180,11 +182,15 @@
     }
 }
 
+.btns-list .u-btn {
+  border-radius: 0;
+}
+
 .u-submit-row {
     background: #f4f4f4;
     padding: 15px;
     text-align: right;
-    margin: 80px 0;
+    margin: 40px 0;
     align-self: center;
 
     &:after {
