--- a/css/split/common.css
+++ b/css/split/common.css
@@ -1826,7 +1826,7 @@ button.button-search {
 }
 
 button {
-	font-family: ItcStoneSansMedium, sans-serif !important;
+	font-family: ItcStoneSansMedium, sans-serif;
 }
 
 /*---------------------------------------------------- Pager ----------------------------------------------------------*/
