--- a/css/new/form.css
+++ b/css/new/form.css
@@ -65,6 +65,12 @@
     color: #282B34;
     box-sizing: border-box;
     outline: none;
+
+    &[disabled] {
+        opacity: .5;
+        cursor: default;
+        background: #eee;
+    }
 }
 
 .u-input {
