--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -21,7 +21,7 @@
             <li>Головна</li>
         </ul>
         <div class="my-uniqa-title">
-            <h1><img src="images/user-avatar.jpg" class="user-avatar"> Welcome, Maximilian Musterman</h1>
+            <h1><img src="images/user-avatar.jpg" class="user-avatar"> Welcome, Maximilian musterman</h1>
         </div>
         {% include "components/menu.njk" %}
 
