--- a/css/split/form.css
+++ b/css/split/form.css
@@ -106,7 +106,8 @@
   border: 1px solid #be001e;
 }
 
-.u-input + .error, .u-textarea + .error {
+.u-input + .error, .u-fields label.error, .u-fields span.error, .u-textarea + .error {
+  display: block;
   margin-top: 4px;
   color: #be001e;
   height: auto;
