--- a/css/new/grid.css
+++ b/css/new/grid.css
@@ -1,3 +1,9 @@
+.visible-xs,
+.visible-md,
+.visible-lg {
+    display: none !important;
+}
+
 .container {
     max-width: 1600px;
     margin: 0 auto;
@@ -600,9 +606,17 @@
   text-align: right;
 }
 
+.text-align-center {
+  text-align: center;
+}
+
 @media screen and (max-width: 680px) {
     .hidden-xs {
-        display: none;
+        display: none !important;
+    }
+
+    .visible-xs {
+        display: block !important;
     }
 
     .column.u-field-state {
@@ -624,7 +638,8 @@
         margin: 30px 0;
     }
 
-    .widget-box {
+    .widget-box,
+    .index-agent-margin {
         margin-bottom: 20px;
     }
 
@@ -660,9 +675,8 @@
 
 @media screen and (max-width: 768px) {
   .hidden-md {
-      display: none;
+      display: none !important;
   }
-
 
   .u-list__line,
   .u-list .state {
