--- a/css/new/my_uniqa.css
+++ b/css/new/my_uniqa.css
@@ -269,6 +269,11 @@ img {max-width: 100%;}
 	.login-deck {
     padding: 50px 30px;
 		background: none;
+
+		& .u-btn {
+			display: block;
+			text-align: center;
+		}
   }
 
   .login-deck__modal {
