--- a/css/split/form.css
+++ b/css/split/form.css
@@ -1,5 +1,9 @@
 .u-fields {
-    margin-bottom: 20px;
+    margin-bottom: 20px
+}
+
+.u-fields--double {
+    margin: 40px 0
 }
 
 .u-fields__separator {
@@ -24,7 +28,7 @@
     background-color: currentColor;
     width: 100%;
     top: 10px;
-    left: 0;
+    left: 0
 }
 
 .u-label {
@@ -36,7 +40,7 @@
 .u-label em {
     color: #ec1717;
     font-size: 18px;
-    line-height: 2px;
+    line-height: 2px
 }
 
 .u-label-line {
@@ -44,7 +48,7 @@
     text-align: left;
     line-height: 14px;
     margin-bottom: 10px;
-    height: auto;
+    height: auto
 }
 
 .u-field-state {
@@ -70,7 +74,7 @@
 .u-select[disabled] {
     opacity: .5;
     cursor: default;
-    background: #eee;
+    background: #eee
 }
 
 .u-input, .u-textarea {
@@ -87,17 +91,17 @@
 .u-input[disabled] {
     opacity: .5;
     cursor: default;
-    background: #eee;
+    background: #eee
 }
 
 .u-input:focus, .u-textarea:focus {
     border: 1px solid #7fadd4;
-    box-shadow: 0 0 5px rgba(127, 173, 212, .5);
+    box-shadow: 0 0 5px rgba(127, 173, 212, .5)
 }
 
 .u-input.error, .u-input.error:focus, .u-textarea.error, .u-textarea.error:focus {
     outline: none;
-    border: 1px solid #be001e;
+    border: 1px solid #be001e
 }
 
 /*Validation*/
@@ -128,64 +132,64 @@
 
 .u-btn[disabled], a.u-btn[disabled], button.u-btn[disabled] {
     opacity: .5;
-    cursor: default;
+    cursor: default
 }
 
 .u-btn.primary, a.u-btn.primary, button.u-btn.primary {
     background: #00ba6f;
     color: #fff;
-    font-style: normal;
+    font-style: normal
 }
 
 .u-btn.primary:hover, a.u-btn.primary:hover, button.u-btn.primary:hover {
-    background: #03a765;
+    background: #03a765
 }
 
 .u-btn.secondary, a.u-btn.secondary, button.u-btn.secondary {
     background: #878a89;
     color: #fff;
-    font-style: normal;
+    font-style: normal
 }
 
 .u-btn.secondary:hover, a.u-btn.secondary:hover, button.u-btn.secondary:hover {
-    background: #767877;
+    background: #767877
 }
 
 .u-btn.small-link, a.u-btn.small-link, button.u-btn.small-link {
     font-size: 14.4px;
     font-size: .9rem;
     padding: 0 5px;
-    font-style: normal;
+    font-style: normal
 }
 
 .u-btn.delete, a.u-btn.delete, button.u-btn.delete {
     color: #fff;
-    background: #f94848;
+    background: #f94848
 }
 
 .u-btn.delete:hover, a.u-btn.delete:hover, button.u-btn.delete:hover {
-    background: #dc3e3e;
+    background: #dc3e3e
 }
 
 .u-btn.big, .u-btn.is--big, a.u-btn.big, a.u-btn.is--big, button.u-btn.big, button.u-btn.is--big {
     line-height: 40px;
     padding: 0 20px;
     font-size: 19.2px;
-    font-size: 1.2rem;
+    font-size: 1.2rem
 }
 
 .u-btn.is--large, a.u-btn.is--large, button.u-btn.is--large {
     line-height: 52px;
     padding: 0 30px;
     font-size: 24px;
-    font-size: 1.5rem;
+    font-size: 1.5rem
 }
 
 .u-btn.small, a.u-btn.small, button.u-btn.small {
     font-size: 14.4px;
     font-size: .9rem;
     padding: 0 10px;
-    line-height: 24px;
+    line-height: 24px
 }
 
 .btns-list .u-btn {
@@ -209,20 +213,20 @@
 .u-submit-row:after {
     content: "";
     display: table;
-    clear: both;
+    clear: both
 }
 
 .u-submit-row.is--stickable {
-    margin-top: 30px;
+    margin-top: 30px
 }
 
 .u-submit-row .ask-questions {
     text-align: left;
-    line-height: 32px;
+    line-height: 32px
 }
 
 .u-submit-row .ask-questions .u-btn {
-    margin-right: 10px;
+    margin-right: 10px
 }
 
 input[type=checkbox].chb-custom {
@@ -237,7 +241,7 @@ input[type=checkbox].chb-custom + .chb-label {
     cursor: pointer;
     position: relative;
     padding-left: 30px;
-    transition: content 1s;
+    transition: content 1s
 }
 
 input[type=checkbox].chb-custom + .chb-label:before {
@@ -253,7 +257,7 @@ input[type=checkbox].chb-custom + .chb-label:before {
     text-align: center;
     line-height: 20px;
     font-size: 12px;
-    font-weight: bold;
+    font-weight: bold
 }
 
 input[type=checkbox].chb-custom:checked + .chb-label {}
@@ -261,13 +265,13 @@ input[type=checkbox].chb-custom:checked + .chb-label {}
 input[type=checkbox].chb-custom:checked + .chb-label:before {
     border-color: #757584;
     background: #eee;
-    content: '\2714';
+    content: '\2714'
 }
 
 input[type=checkbox].chb-custom:focus + .chb-label {}
 
 input[type=checkbox].chb-custom:focus + .chb-label:before {
-    border: 1px solid #7fadd4;
+    border: 1px solid #7fadd4
 }
 
 input[type="radio"].u-radio {
@@ -282,7 +286,7 @@ input[type="radio"].u-radio + label {
     padding-left: 30px;
     line-height: 34px;
     transition: content 1s;
-    margin-right: 20px;
+    margin-right: 20px
 }
 
 input[type="radio"].u-radio + label:before {
@@ -296,7 +300,7 @@ input[type="radio"].u-radio + label:before {
     width: 16px;
     height: 16px;
     text-align: center;
-    line-height: 20px;
+    line-height: 20px
 }
 
 input[type="radio"].u-radio:checked + label {}
@@ -310,7 +314,7 @@ input[type="radio"].u-radio:checked + label:after {
     height: 10px;
     line-height: 10px;
     top: 12px;
-    left: 4px;
+    left: 4px
 }
 
 .u-list__line input[type=radio].u-radio+label {
@@ -361,19 +365,19 @@ input[type="radio"].u-radio:checked + label:after {
     position: absolute;
     bottom: -15px;
     left: 50%;
-    margin-left: -15px;
+    margin-left: -15px
 }
 
 .u-fields-hint:after {
     margin-left: -14px;
     bottom: -14px;
     border-width: 14px 14px 0 14px;
-    border-color: #fff transparent transparent transparent;
+    border-color: #fff transparent transparent transparent
 }
 
 .u-fields-hint ul {
     margin: 0;
-    padding: 0 0 0 20px;
+    padding: 0 0 0 20px
 }
 
 .has-hint .u-input:focus + .u-fields-hint {
@@ -546,13 +550,13 @@ input[type="radio"].u-radio:checked + label:after {
     color: #666;
     width: 80px;
     display: block;
-    padding-top: 4px;
+    padding-top: 4px
 }
 
 .image-upload-deck .image-upload {
     display: inline-block;
     position: absolute;
-    right: -10px;
+    right: -10px
 }
 
 .space-between {
@@ -586,7 +590,7 @@ input[type="radio"].u-radio:checked + label:after {
     padding: 3px 10px;
     text-align: center;
     position: absolute;
-    z-index: 98;
+    z-index: 98
 }
 
 .label-tooltip:hover i, .label-tooltip:active i {
@@ -600,7 +604,7 @@ input[type="radio"].u-radio:checked + label:after {
     z-index: 99;
     border-style: solid;
     border-width: 9px 9px 0 9px;
-    border-color: #65aed6 transparent transparent transparent;
+    border-color: #65aed6 transparent transparent transparent
 }
 
 .label-tooltip:hover i:after, .label-tooltip:active i:after {
@@ -614,7 +618,7 @@ input[type="radio"].u-radio:checked + label:after {
     z-index: 100;
     border-style: solid;
     border-width: 8px 8px 0 8px;
-    border-color: #fff transparent transparent transparent;
+    border-color: #fff transparent transparent transparent
 }
 
 @media screen and (max-width: 50em) {
@@ -654,12 +658,12 @@ input[type="radio"].u-radio:checked + label:after {
 }
 
 .btn-dropdown-container.is-open .btn-dropdown, .btn-dropdown-container.is-open .btn-dropdown-overlay {
-    display: block;
+    display: block
 }
 
 .btn-dropdown-container.to-top .btn-dropdown {
     top: auto;
-    bottom: 40px;
+    bottom: 40px
 }
 
 .btn-dropdown  {
@@ -678,12 +682,12 @@ input[type="radio"].u-radio:checked + label:after {
 .btn-dropdown ul {
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style: none
 }
 
 .btn-dropdown li {
     padding: 0;
-    margin: 0;
+    margin: 0
 }
 
 .btn-dropdown a.arrow {
@@ -691,7 +695,7 @@ input[type="radio"].u-radio:checked + label:after {
     font-size: 16px;
     font-size: 1rem;
     font-weight: 400;
-    font-style: normal;
+    font-style: normal
 }
 
 .btn-dropdown-overlay {
@@ -701,7 +705,7 @@ input[type="radio"].u-radio:checked + label:after {
     width: 100%;
     height: 100vh;
     z-index: 99;
-    display: none;
+    display: none
 }
 
 @media screen and (max-width: 480px) {
