--- a/templates/pages/my-registration-2.html
+++ b/templates/pages/my-registration-2.html
@@ -33,7 +33,7 @@
             <div class="u-fields flx-row align-middle">
                 <div class="column small-11">
                     <div class="has-hint">
-                      <input type="password" class="u-input input-validation-error" name="user-password" id="user-password" placeholder="Пароль">
+                      <input type="password" class="u-input input-validation-error" name="user-password" id="user-password" placeholder="Пароль" autocomplete="off">
                       <div class="u-fields-hint">
                         <ul>
                           <li>Щонайменше 7 символiв</li>
