--- a/css/split/form.css
+++ b/css/split/form.css
@@ -60,6 +60,10 @@
     position: absolute;
 }
 
+.align-top [ class*=icon-state] {
+  margin-top: 14px;
+}
+
 .u-select {
     width: 100%;
     height: 34px;
