--- a/css/split/my_uniqa.css
+++ b/css/split/my_uniqa.css
@@ -1,6 +1,5 @@
 /*Variables*/
 
-
 a.account-type:link, a.account-type:visited, span.account-type {
 	background: #7fadd4;
 	color: #fff;
@@ -146,9 +145,9 @@ img {max-width: 100%;}
 }
 
 .personal-header {
-  position: absolute;
+	position: absolute;
 	top: 18px;
-	right: 140px
+	right: 12%
 }
 
 .personal-header__item {
@@ -289,4 +288,15 @@ img {max-width: 100%;}
 .submenu a.arrow .size16 {
 	height: 14px;
 	overflow: hidden;
+}
+
+@media only screen and (max-width: 1024px) and (min-width: 780px) {
+    .section.top-links .account-type {
+        float: left;
+        width: 120px;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
 }
