added new files and changes for my-index

--- a/templates/components/agent-index-logined.njk
+++ b/templates/components/agent-index-logined.njk
@@ -1,4 +1,4 @@
-<div class="column small-12 medium-4 large-12 contact-box department_wrap">
+<div class="column small-12 medium-4 large-12 contact-box department_wrap hidden-xs">
     <div id="customer-content" class="content mainColor50" style="display: block;">
         <h3>Звертайтесь до нас</h3>
 
