--- a/templates/pages/my-index.html
+++ b/templates/pages/my-index.html
@@ -144,7 +144,7 @@
                           <div class="widget-blue-box__message">специфльні пропозіції для vip кліентів.</div>
                         </div>
                     </div>
-                    {% include "components/agent-index.njk" %}
+                    {% include "components/agent-index-logined.njk" %}
                     <div class="column small-12 medium-4 large-12 widget-blue-box">
                       <div class="widget-wrapper">
                           <div class="widget-blue-box__header">Платежi онлайн</div>
