--- a/templates/pages/my-insurances-item.html
+++ b/templates/pages/my-insurances-item.html
@@ -31,6 +31,8 @@
 
     <div class="flx-row">
         <div class="column small-12 medium-12 large-9">
+             {% include "components/steps-slider.njk" %}
+
             {% include "sections/claim.njk" %}
         </div>
         <div class="column small-12 medium-12 large-3">
