--- a/css/new/docs.css
+++ b/css/new/docs.css
@@ -268,6 +268,7 @@ padding: 0 15px;
   overflow-x: auto;
 }
 
+
 @media screen and (max-width: 480px) {
   .document-view__content.btns-list .u-btn {
     margin-bottom: 15px;
@@ -288,5 +289,58 @@ padding: 0 15px;
   .document-view__list--item .document-view__list--img {
     margin-right: 5px;
     margin-bottom: 5px;
+  }
+}
+
+/* step slider */
+
+.step-slider {
+  width: 100%;
+  list-style: none;
+  margin: 10px 0 20px;
+  padding: 0;
+  text-align: center;
+  display: flex;
+  flex-direction: row nowrap;
+  color: #999;
+  font-size: 11px;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 10%;
+    right: 10%;
+    height: 6px;
+    background: #f4f4f4;
+    border: 1px solid #ececec;
+    z-index: 0;
+  }
+
+  & li {
+    flex: 1;
+    z-index: 2;
+  }
+
+  & li.is-active {
+    color: #055ca9;
+    cursor: pointer;
+      
+    .step-slider__number {
+        background: #055ca9;
+        border-color: #055ca9;
+        color: #fff;
+      }
+  }
+
+  &__number {
+    display: inline-block;
+    border-radius: 50%;
+    padding: 5px 10px;
+    margin-bottom: 5px;
+    background: #f4f4f4;
+    border: 1px solid #ececec;
+    transition: background 100ms;
   }
 }
